# binary_diff

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Color.cmake  CompileOptions.cmake  Logging.cmake
src/: CMakeLists.txt  main.cpp
src/InnerFolder/: CMakeLists.txt
tests/data/test1/folder1/: equal_file1
tests/data/test1/folder2/: binary_diff  equal_file2
